--- a/accessory/index.html
+++ b/accessory/index.html
@@ -2,7 +2,50 @@
 <html>
   <head>
     <title>Car Accessories</title>
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+      integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      function calculatePrice(accessory) {
+        switch (accessory) {
+          case 'carCover':
+            return 50
+          case 'seatCovers':
+            return 30
+          case 'floorMats':
+            return 20
+          default:
+            return 0
+        }
+      }
+
+      function addToProductList() {
+        var accessory = $('#accessory').val()
+        var amount = $('#amount').val()
+        var price = calculatePrice(accessory)
+
+        var table = $('#productList tbody')
+        let total = price * amount
+        table.before(
+          `<tr>
+            <td>${accessory}</td>
+            <td>${amount}</td>
+            <td>$ ${total}</td>`
+        )
+
+        var totalPrice = parseFloat($('#totalPrice')[0].innerHTML)
+        totalPrice += total
+        $('#totalPrice')[0].innerHTML = totalPrice.toFixed(2)
+        var grossPrice = $('#totalPrice')[0].innerHTML
+        var vat = parseFloat(grossPrice) * 0.07
+        var net = parseFloat(grossPrice) + vat
+        $('#vat')[0].innerText = vat.toFixed(2)
+        $('#net')[0].innerText = net.toFixed(2)
+      }
+    </script>
   </head>
   <body>
     <h1>Car Accessories</h1>
@@ -13,7 +56,6 @@
         <option value="carCover">Car Cover</option>
         <option value="seatCovers">Seat Covers</option>
         <option value="floorMats">Floor Mats</option>
-        <!-- Add more options as needed -->
       </select>
 
       <label for="amount">Amount:</label>
@@ -25,11 +67,14 @@
     <h2>Product List</h2>
 
     <table id="productList">
-      <tr>
-        <th>Accessory</th>
-        <th>Amount</th>
-        <th>Price</th>
-      </tr>
+      <thead>
+        <tr>
+          <th>Accessory</th>
+          <th>Amount</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
     </table>
 
     <p class="total">
@@ -38,57 +83,5 @@
       <br />
       Total Price: <span id="net"></span>
     </p>
-
-    <script>
-      function addToProductList() {
-        var accessory = document.getElementById('accessory').value
-        var amount = document.getElementById('amount').value
-        var price = calculatePrice(accessory)
-
-        var table = document.getElementById('productList')
-        var row = table.insertRow(-1)
-        var accessoryCell = row.insertCell(0)
-        var amountCell = row.insertCell(1)
-        var priceCell = row.insertCell(2)
-
-        accessoryCell.innerHTML = accessory
-        amountCell.innerHTML = amount
-        let total = price * amount
-        priceCell.innerHTML = '$' + total
-
-        updateTotalPrice(total)
-      }
-
-      function calculatePrice(accessory) {
-        // Add your own logic to calculate the price based on the selected accessory
-        switch (accessory) {
-          case 'carCover':
-            return 50
-          case 'seatCovers':
-            return 30
-          case 'floorMats':
-            return 20
-          // Add more cases as needed
-          default:
-            return 0
-        }
-      }
-
-      function updateTotalPrice(price) {
-        var totalPriceElement = document.getElementById('totalPrice')
-        var totalPrice = parseFloat(totalPriceElement.innerHTML)
-        totalPrice += price
-        totalPriceElement.innerHTML = totalPrice.toFixed(2)
-        calculateVAT()
-      }
-
-      function calculateVAT() {
-        var grossPrice = document.getElementById('totalPrice').innerText
-        var vat = parseFloat(grossPrice) * 0.07
-        var net = parseFloat(grossPrice) + vat
-        document.getElementById('vat').innerText = vat.toFixed(2)
-        document.getElementById('net').innerText = net.toFixed(2)
-      }
-    </script>
   </body>
 </html>
